@@ -353,7 +353,7 @@ module Rails
     # If assigned value cannot be matched to a TimeZone, an exception will be raised.
     def initialize_time_zone
       if configuration.time_zone
-        zone_default = TimeZone[configuration.time_zone]
+        zone_default = Time.send!(:get_zone, configuration.time_zone)
         unless zone_default
           raise "Value assigned to config.time_zone not recognized. Run `rake -D time` for a list of tasks for finding appropriate time zone names."
         end
