@@ -1,5 +1,7 @@
 *SVN*
 
+* config.time_zone accepts TZInfo::Timezone identifiers as well as Rails TimeZone identifiers [Geoff Buesing]
+
 * Rails::Initializer#initialize_time_zone raises an error if value assigned to config.time_zone is not recognized. Rake time zone tasks only require ActiveSupport instead of entire environment [Geoff Buesing]
 
 * Stop adding the antiquated test/mocks/* directories and only add them to the path if they're still there for legacy reasons [DHH]
